--- a/.env.example
+++ b/.env.example
@@ -34,17 +34,13 @@ NEXTAUTH_SECRET=change-me-in-production-use-openssl-rand-hex-32
 # Leave all empty to use development credential-based login (default)
 # Choose ONE of the following authentication methods:
 
-# Option 1: Authentik OIDC
-# AUTHENTIK_URL=https://auth.example.com
-# AUTHENTIK_CLIENT_ID=wardrobe
-# AUTHENTIK_CLIENT_SECRET=your-client-secret
+# Option 1: OIDC
+# OIDC_ISSUER_URL=https://auth.example.com
+# OIDC_CLIENT_ID=wardrobe
+# OIDC_CLIENT_SECRET=your-client-secret
+# OIDC_END_SESSION_URL=https://auth.example.com/api/oidc/end-session
 
-# Option 2: Pocket ID OIDC
-# POCKETID_URL=https://pocketid.example.com
-# POCKETID_CLIENT_ID=wardrobe
-# POCKETID_CLIENT_SECRET=your-client-secret
-
-# Option 3: Forward Auth (TinyAuth, Authelia, etc.)
+# Option 2: Forward Auth (TinyAuth, Authelia, etc.)
 # AUTH_TRUST_PROXY=true
 
 # AI Service Configuration
@@ -57,12 +53,13 @@ NEXTAUTH_SECRET=change-me-in-production-use-openssl-rand-hex-32
 # ============================================================================
 # 1. Install Ollama from https://ollama.ai
 # 2. Pull required models:
-#    ollama pull gemma3        # Multimode LLM for image analyis and recommendations
+#    ollama pull llava:7b      # Vision model for image analysis
+#    ollama pull gemma3        # Text model for recommendations
 #    (Alternative text models: llama3, qwen2.5, mistral)
 # 3. Use this configuration:
 AI_BASE_URL=http://host.docker.internal:11434/v1
 AI_API_KEY=not-needed
-AI_VISION_MODEL=gemma3:latest
+AI_VISION_MODEL=llava:7b
 AI_TEXT_MODEL=gemma3:latest
 
 # Option 2: OpenAI (Paid API - requires API key)
