--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,10 @@ services:
       SECRET_KEY: ${SECRET_KEY:-change-me-in-production}
       CORS_ORIGINS: '["http://localhost:3000", "http://frontend:3000"]'
       STORAGE_PATH: /data/wardrobe
-      AI_BASE_URL: ${AI_BASE_URL:-}
+      OIDC_ISSUER_URL: ${OIDC_ISSUER_URL:-}
+      OIDC_CLIENT_ID: ${OIDC_CLIENT_ID:-}
+      OIDC_CLIENT_SECRET: ${OIDC_CLIENT_SECRET:-}
+      AI_BASE_URL: ${AI_BASE_URL:-http://host.docker.internal:11434/v1}
       AI_VISION_MODEL: ${AI_VISION_MODEL:-gpt-4o}
       AI_TEXT_MODEL: ${AI_TEXT_MODEL:-gpt-4o}
       NTFY_SERVER: ${NTFY_SERVER:-}
@@ -76,18 +79,9 @@ services:
       dockerfile: Dockerfile
     container_name: wardrobe-frontend
     environment:
-      BACKEND_URL: http://backend:8000
       NEXT_PUBLIC_API_URL: http://backend:8000
       NEXTAUTH_URL: ${NEXTAUTH_URL:-http://localhost:3000}
       NEXTAUTH_SECRET: ${NEXTAUTH_SECRET:-change-me-in-production}
-      # Auth providers (leave empty for dev credentials)
-      AUTHENTIK_URL: ${AUTHENTIK_URL:-}
-      AUTHENTIK_CLIENT_ID: ${AUTHENTIK_CLIENT_ID:-}
-      AUTHENTIK_CLIENT_SECRET: ${AUTHENTIK_CLIENT_SECRET:-}
-      POCKETID_URL: ${POCKETID_URL:-}
-      POCKETID_CLIENT_ID: ${POCKETID_CLIENT_ID:-}
-      POCKETID_CLIENT_SECRET: ${POCKETID_CLIENT_SECRET:-}
-      AUTH_TRUST_PROXY: ${AUTH_TRUST_PROXY:-}
     ports:
       - "${FRONTEND_PORT:-3000}:3000"
     depends_on:
@@ -106,7 +100,7 @@ services:
     environment:
       DATABASE_URL: postgresql+asyncpg://${POSTGRES_USER:-wardrobe}:${POSTGRES_PASSWORD:-wardrobe}@postgres:5432/${POSTGRES_DB:-wardrobe}
       REDIS_URL: redis://redis:6379/0
-      AI_BASE_URL: ${AI_BASE_URL:-}
+      AI_BASE_URL: ${AI_BASE_URL:-http://host.docker.internal:11434/v1}
       AI_VISION_MODEL: ${AI_VISION_MODEL:-gpt-4o}
       AI_TEXT_MODEL: ${AI_TEXT_MODEL:-gpt-4o}
       STORAGE_PATH: /data/wardrobe
