--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -29,12 +29,25 @@ spec:
       labels:
         app: backend
     spec:
+      automountServiceAccountToken: false
+      securityContext:
+        fsGroup: 1000
       containers:
         - name: backend
           image: wardrobe/backend:latest
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8000
+          securityContext:
+            runAsNonRoot: true
+            runAsUser: 1000
+            allowPrivilegeEscalation: false
+            readOnlyRootFilesystem: false
+            seccompProfile:
+              type: RuntimeDefault
+            capabilities:
+              drop:
+                - ALL
           env:
             - name: DATABASE_URL
               valueFrom:
@@ -126,6 +139,42 @@ spec:
                 secretKeyRef:
                   name: wardrobe-notifications
                   key: ntfy-token
+                  optional: true
+            - name: SMTP_HOST
+              valueFrom:
+                configMapKeyRef:
+                  name: wardrobe-config
+                  key: SMTP_HOST
+                  optional: true
+            - name: SMTP_PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: wardrobe-config
+                  key: SMTP_PORT
+                  optional: true
+            - name: SMTP_FROM_NAME
+              valueFrom:
+                configMapKeyRef:
+                  name: wardrobe-config
+                  key: SMTP_FROM_NAME
+                  optional: true
+            - name: SMTP_FROM_EMAIL
+              valueFrom:
+                configMapKeyRef:
+                  name: wardrobe-config
+                  key: SMTP_FROM_EMAIL
+                  optional: true
+            - name: SMTP_USER
+              valueFrom:
+                secretKeyRef:
+                  name: wardrobe-notifications
+                  key: smtp-user
+                  optional: true
+            - name: SMTP_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: wardrobe-notifications
+                  key: smtp-password
                   optional: true
           volumeMounts:
             - name: uploads
