--- a/k8s/redis.yaml
+++ b/k8s/redis.yaml
@@ -31,11 +31,21 @@ spec:
       labels:
         app: redis
     spec:
+      automountServiceAccountToken: false
+      securityContext:
+        fsGroup: 999
       containers:
         - name: redis
           image: redis:7-alpine
           ports:
             - containerPort: 6379
+          securityContext:
+            allowPrivilegeEscalation: false
+            seccompProfile:
+              type: RuntimeDefault
+            capabilities:
+              drop:
+                - ALL
           command:
             - redis-server
             - --appendonly
